[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stable_map"
requires-python = ">=3.10"
dynamic = ["version", "readme"]
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
version = {attr = "stable_map.__version__"}
readme = {file = ["README.md"]}
